syntax = "proto3";

package trst.x.alloc.v1beta1;

option go_package = "github.com/trstlabs/trst/x/alloc/types";

import "gogoproto/gogo.proto";


message WeightedAddress {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  string weight = 2 [
    (gogoproto.moretags) = "yaml:\"weight\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message DistributionProportions {
   string staking = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"staking\"",
    (gogoproto.nullable) = false
  ];
  string trustless_contract_incentives = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"trustless_contract_incentives\"",
    (gogoproto.nullable) = false
  ];
 /*  string item_incentives = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"item_incentives\"",
    (gogoproto.nullable) = false
  ];*/
  string developer_rewards = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"developer_rewards\"",
    (gogoproto.nullable) = false
  ];
   // community_pool defines the proportion of the minted minted_denom that is
  // to be allocated to the community pool.
  string community_pool = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
}

message Params {
  // distribution_proportions defines the proportion of the minted denom
  DistributionProportions distribution_proportions = 1
      [ (gogoproto.nullable) = false ];
  // address to receive developer rewards
  repeated WeightedAddress weighted_developer_rewards_receivers = 2 [
    (gogoproto.moretags) = "yaml:\"developer_rewards_receiver\"",
    (gogoproto.nullable) = false
  ];
}
